# t-fujita-card

./: README.md  pyproject.toml  t-fujita.webm
.github/workflows/: publish.yml
t_fujita/: card.py
