[tool.poetry]
name = "t-fujita-card"
version = "0.1.0"
description = ""
authors = ["t-fujita <t-fujita@creationline.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.7.1"
typer = "^0.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
t-fujita-card = "t_fujita_card.card:app"
